# SoleSigner

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build_log.txt  conn_debug.txt  conn_log.txt  conn_run.txt  error_log.txt  errors.txt  stdout_err.txt  tareas.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: layout.tsx
frontend/app/admin/create/: page.tsx
frontend/app/admin/elections/: page.tsx
frontend/app/admin/monitor/[id]/: page.tsx
frontend/app/admin/whitelist/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/results/[id]/: page.tsx
frontend/app/verify/: page.tsx
frontend/app/vote/[election_id]/: page.tsx
frontend/components/: auth-provider.tsx  language-provider.tsx  language-selector.tsx
frontend/components/ui/: toaster.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: utils.ts
migrations/: 20240101000000_init_schema.sql  20260131140000_add_auth_schema.sql
src/: main.rs
src/api/: mod.rs
src/crypto/: mod.rs
src/identity/: mod.rs
src/scheduler/: mod.rs
